feat(history): implement fuzzy search and improved filtering in HistoryFragment
- Introduced `FuzzySearch` utility with typo tolerance and multi-word matching for entities (wallets, categories, merchants, tags).
- Added `TransactionSearchResolver` to map search queries to specific entity IDs and formatted amounts.
- Implemented `HistoryQuery` and `HistorySearch` data models to encapsulate complex filtering and search criteria.
- Refactored `TransactionDao` and `TransactionGateway` to support unified history queries with SQL `LIKE` and `IN` clauses for deep search.
- Added a debounced search input field to the `HistoryFragment` UI with a clear action and updated empty states for search results.
- Integrated fuzzy search into `CategorySearchDialog` and `NamedEntitySearchDialog` for better entity selection.
- Added `DebouncedTextWatcher` to optimize search performance and prevent excessive database queries during typing.
- Included a comprehensive research document outlining future balance adjustment and transfer feature implementations.
- Added unit and instrumentation tests for fuzzy search logic and history search persistence.